--- a/renders/render.html
+++ b/renders/render.html
@@ -3,6 +3,8 @@
 
 <p>coin changes: {{'{:<10.4f}'.format(coin_changes)}}, fiat changes: {{'{:<10.4f}'.format(fiat_changes)}}</p>
 
+<p>current rate: {{'{:<10.4f}'.format(coin_price)}}</p>
+
 <h3>Details</h3>
 <table border="1" width="75%">
     <tr>
