--- a/res/render.html
+++ b/res/render.html
@@ -1,15 +1,7 @@
 <html>
 {%if language=='zh' %}
-  {%if coin_price < 0.01%}
-    {%include 'simple-zh.html'%}
-  {%else%}
-    {%include 'complete-zh.html'%}
-  {%endif%}
+{%include 'report-zh.html'%}
 {%else%}
-  {%if coin_price < 0.01%}
-    {%include 'simple.html'%}
-  {%else%}
-    {%include 'complete.html'%}
-  {%endif%}
+{%include 'report.html'%}
 {%endif%}
 </html>
