adjust_ratio instead

--- a/res/abnormal-zh.html
+++ b/res/abnormal-zh.html
@@ -1,6 +1,6 @@
 <h2></h2>
 
-<p><b>出现异常</b>: 局部调整次数超过{{adjust_num}}</p>
+<p><b>出现异常</b>: 局部调整次数={{stats.adjust_num}}, 交易次数={{stats.arbitrage_num}}</p>
 
 <table border="1" width="40%">
     <tr>
