--- a/res/report-zh.html
+++ b/res/report-zh.html
@@ -8,7 +8,7 @@
 {%endif%}
 
 <p>虚拟币变化: {{'{:<10.4f}'.format(coin_changes)}}, 法币变化: {{'{:<10.4f}'.format(fiat_changes)}}</p>
-<p>交易机会: {{stats.trade_chance}}, 资金不足次数:{{stats.insufficient_num}}</p>
+<p>等待平衡次数: {{stats.wait_imbalanced}}, 交易机会: {{stats.trade_chance}}, 资金不足次数:{{stats.insufficient_num}}</p>
 <p>交易次数: {{stats.arbitrage_num}}, 未完全成交次数:{{stats.adjust_num}}, 全局调整次数:{{stats.monitor_num}}</p>
 
 
